# ya-cli

./: .gitignore  README.md  pyproject.toml  vulnerabilities.md  yacli.example.jsonc
tests/: test_agent_tools.py  test_client.py  test_input.py  test_models.py
yandexcli/: __init__.py  agent.py  attachments.py  cli.py  client.py  config.py  context.py  input.py  legacy.py  models.py  safety.py  sessions.py  tools.py  ui.py
