[project]
name = "yandexcli"
version = "0.1.0"
description = "Terminal coding agent for YandexGPT and Alice AI models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["certifi>=2024.0.0"]

[project.optional-dependencies]
dev = ["mypy>=1.10", "ruff>=0.5"]

[project.scripts]
yandexcli = "yandexcli.cli:main"
ygpt = "yandexcli.cli:main"
yandexgpt = "yandexcli.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_configs = true
